--- a/Rmarkdown/rap-2pg-cv.Rmd
+++ b/Rmarkdown/rap-2pg-cv.Rmd
@@ -56,7 +56,7 @@ urlcolor: blue
  
  \hfill April 12, 2019 
 
- > by by [Andrew Ng](https://www.andrewng.org/), Adjunct Professor of Computer Science at Stanford University, founder of deeplearning.ai on Coursera. 
+ > by [Andrew Ng](https://www.andrewng.org/), Adjunct Professor of Computer Science at Stanford University, founder of deeplearning.ai on Coursera. 
 
 **[Neural Networks and Deep Learning (Python)](https://www.coursera.org/account/accomplishments/certificate/GXEC87BNVR5S)**  \hfill March 30, 2019
 
