updated certificate 4th

--- a/Rmarkdown/rap-2pg-cv.Rmd
+++ b/Rmarkdown/rap-2pg-cv.Rmd
@@ -52,6 +52,11 @@ urlcolor: blue
 
 # CERTIFICATES
 
+**[Convolutional Neural Networks](https://www.coursera.org/account/accomplishments/certificate/FKNCMLGT2Z8C)**
+\hfill July 31, 2019
+
+ > by [Andrew Ng](https://www.andrewng.org/), Adjunct Professor of Computer Science at Stanford University, founder of deeplearning.ai on Coursera.
+
 **[Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization](https://www.coursera.org/account/accomplishments/certificate/MMCWAQRTWYL3)** 
  
  \hfill April 12, 2019 
