--- a/Rmarkdown/rap-2pg-cv.Rmd
+++ b/Rmarkdown/rap-2pg-cv.Rmd
@@ -36,19 +36,50 @@ urlcolor: blue
 
 **Shanghai Jiaotong Univeristy**, B.S. Nutrition Science \hfill 2010.7  
 
-# EMPLOYMENT
+<!-- # EMPLOYMENT -->
+# CAREER HISTORY
+
 
 **Department of Public Health, Aichi Medical University School of Medicine:**
 
  > Assistant Professor \hfill 2015.4--present
 
-**Department of Public Health, Fujita Health University School of Medicine:**
 
- > Research Assistant \hfill 2013.4--2015.3
+## Responsibility: teaching and research
 
-**Department of Public Health and Health Systems, Nagoya University Graduate School of Medicine**
+-	Working closely with the professors and other colleagues mainly in epidemiology of gastroenterological cancer
+-	Responsible for statistical consulting from medical doctors in the university hospital
+-	Responsible for education to undergraduate medical students on statistical methods used in medical researches
+-	Cooperating with medical doctors in hospital university on projects studying locomotive syndrome
 
- > Research Assistant \hfill 2013.4--2015.3
+## Projects: 
+-	Data analysis using large scale cohort studies such as the Japan Collaborative Cohort Study, literature meta-analysis, the UK National Diet and Nutrition Survey Rolling Program data, and data provided by doctors in Aichi Medical University hospital
+-	All projects and publications were conducted under Linux environment such as Ubuntu OS with R, STATA, and/or Python language
+-	Presented in the World Congress of Epidemiology in Alaska (2014) as well as in Saitama (2017) as poster presentations
+-	Recent research on the day-time patterns of carbohydrate intake using the UK national Diet and Nutrition Survey data was accepted as oral presentation in the 13th European Nutrition Conference in Dublin, Ireland 2019
+
+
+
+**Clinical Study Support:**
+  
+ > Part-time Researcher (8h/w) \hfill 2018.10--present
+
+
+## Responsibility: statistical analysis, training of the analysis team
+-	Experience in producing statistical analysis plan (SAP) for clinical and observational studies; conducted detailed comparisons and results calculation on cancer survival from hospital clients; performed database analyses through commercial medical databases such as Medical Database Vision.
+-	Organizing statistical study seminars to train the team members and learn the latest statistical knowledge and skills for on-going and future study projects
+
+
+<!-- **Department of Public Health, Fujita Health University School of Medicine:** -->
+
+<!--  > Research Assistant \hfill 2013.4--2015.3 -->
+
+<!-- **Department of Public Health and Health Systems, Nagoya University Graduate School of Medicine** -->
+
+<!--  > Research Assistant \hfill 2013.4--2015.3 -->
+
+
+
 
 <!-- # CERTIFICATES -->
 
@@ -83,68 +114,71 @@ urlcolor: blue
 
 <!-- > I gave 3rd students a lecture on Nutritional Epidemiology. (http://wangcc.me/slides417/) -->
 
-# PROFESSIONAL AFFILIATIONS
+<!-- # PROFESSIONAL AFFILIATIONS -->
 
-Member of: 
+<!-- Member of:  -->
 
-- International Epidemiological Association 
+<!-- - International Epidemiological Association  -->
 
-- Japan Epidemiological Association
+<!-- - Japan Epidemiological Association -->
 
-<!-- - The Japanese Society for *Helicobacter* Research -->
+<!-- <!-- - The Japanese Society for *Helicobacter* Research --> 
 
-- Japanese Society of Computational Statistics
+<!-- - Japanese Society of Computational Statistics -->
+
+
 
 # PUBLICATIONS
 
+- **\*Wang, C.**, Yatsuya, H., Tamakoshi, K., Uemura, M., Li, Y., *et al.* 2013. Positive association between high-sensitivity C-reactive protein and incidence of type 2 diabetes mellitus in Japanese workers: 6-year follow-up. **Diabetes Metab Res Rev** 29, 398–405. 
 
-1. **\*Wang, C.**, Yatsuya, H., Tamakoshi, K., Uemura, M., Li, Y., *et al.* 2013. Positive association between high-sensitivity C-reactive protein and incidence of type 2 diabetes mellitus in Japanese workers: 6-year follow-up. **Diabetes Metab Res Rev** 29, 398–405. doi:10.1002/dmrr.2406
+<!-- 2. Uemura, M, Yatsuya, H., Tamakoshi, K., Li, Y., **\*Wang, C.**, *et al.* 2014. Association between five dietary health metrics of the American Heart Association and results of health checkups in a cross-sectional study of Japanese workers. **J J Cardiol Dis Prev** 49, 11. [Article in Japanese] -->
 
-2. Uemura, M, Yatsuya, H., Tamakoshi, K., Li, Y., **\*Wang, C.**, *et al.* 2014. Association between five dietary health metrics of the American Heart Association and results of health checkups in a cross-sectional study of Japanese workers. **J J Cardiol Dis Prev** 49, 11. [Article in Japanese]
+<!-- 3. Yatsuya, H., Li, Y., Hilawe, E.H., Ota, A., **\*Wang, C.**, *et al.* 2014. Global trend in overweight and obesity and its association with cardiovascular disease incidence. **Circ J** 78, 2807–2818. doi:10.1253/circj.CJ-14-0850 -->
 
-3. Yatsuya, H., Li, Y., Hilawe, E.H., Ota, A., **\*Wang, C.**, *et al.* 2014. Global trend in overweight and obesity and its association with cardiovascular disease incidence. **Circ J** 78, 2807–2818. doi:10.1253/circj.CJ-14-0850
+<!-- 4. Yatsuya, H., Nihashi, T., Li, Y., Hotta, Y., Matsushita, K., Muramatsu, T., Otsuka, R., Matsunaga, M., Yamashita, K., **\*Wang, C.**, *et al.* 2014. Independent association of liver fat accumulation with insulin resistance. **Obes Res Clin Pract** 8, e350-355. doi:10.1016/j.orcp.2013.08.002 -->
 
-4. Yatsuya, H., Nihashi, T., Li, Y., Hotta, Y., Matsushita, K., Muramatsu, T., Otsuka, R., Matsunaga, M., Yamashita, K., **\*Wang, C.**, *et al.* 2014. Independent association of liver fat accumulation with insulin resistance. **Obes Res Clin Pract** 8, e350-355. doi:10.1016/j.orcp.2013.08.002
+<!-- 5. Uemura, M., Yatsuya, H., Hilawe, E.H., Li, Y., **\*Wang, C.**, *et al.* 2015. Breakfast skipping is positively associated with incidence of type 2 diabetes mellitus: evidence from the Aichi workers’ cohort study. **J Epidemiol** 25, 351–358. doi:10.2188/jea.JE20140109 -->
 
-5. Uemura, M., Yatsuya, H., Hilawe, E.H., Li, Y., **\*Wang, C.**, *et al.* 2015. Breakfast skipping is positively associated with incidence of type 2 diabetes mellitus: evidence from the Aichi workers’ cohort study. **J Epidemiol** 25, 351–358. doi:10.2188/jea.JE20140109
+- **\*Wang, C.**, Yatsuya, H., Tamakoshi, K., Iso, H., Tamakoshi, A., 2015. Milk drinking and mortality: findings from the Japan collaborative cohort study. **J Epidemiol** 25, 66–73.
 
-6. **\*Wang, C.**, Yatsuya, H., Tamakoshi, K., Iso, H., Tamakoshi, A., 2015. Milk drinking and mortality: findings from the Japan collaborative cohort study. **J Epidemiol** 25, 66–73. doi:10.2188/jea.JE20140081
+- **\*Wang, C.**, Yatsuya, H., Tamakoshi, K., Toyoshima, H., Wada, K., *et al.* 2015. Association between parental history of diabetes and the incidence of type 2 diabetes mellitus differs according to the sex of the parent and offspring’s body weight: A finding from a Japanese worksite-based cohort study. **Prev Med** 81, 49–53.
 
-7. **\*Wang, C.**, Yatsuya, H., Tamakoshi, K., Toyoshima, H., Wada, K., *et al.* 2015. Association between parental history of diabetes and the incidence of type 2 diabetes mellitus differs according to the sex of the parent and offspring’s body weight: A finding from a Japanese worksite-based cohort study. **Prev Med** 81, 49–53. doi:10.1016/j.ypmed.2015.07.021
+<!-- 8. Hilawe, E.H., Yatsuya, H., Li, Y., Uemura, M., **\*Wang, C.**, *et al.* 2015. Smoking and Diabetes: Is the Association Mediated by Adiponectin, Leptin, or C-reactive Protein? **J Epidemiol** 25, 99–109. doi:10.2188/jea.JE20140055 -->
 
-8. Hilawe, E.H., Yatsuya, H., Li, Y., Uemura, M., **\*Wang, C.**, *et al.* 2015. Smoking and Diabetes: Is the Association Mediated by Adiponectin, Leptin, or C-reactive Protein? **J Epidemiol** 25, 99–109. doi:10.2188/jea.JE20140055
+<!-- 9. Sawada, T., Nishiyama, T., Kikuchi, N., **\*Wang, C.**, *et al.* 2016. The influence of personality and perceived stress on the development of breast cancer: 20-year follow-up of 29,098 Japanese women. **Sci Rep** 6, 32559. doi:10.1038/srep32559 -->
 
-9. Sawada, T., Nishiyama, T., Kikuchi, N., **\*Wang, C.**, *et al.* 2016. The influence of personality and perceived stress on the development of breast cancer: 20-year follow-up of 29,098 Japanese women. **Sci Rep** 6, 32559. doi:10.1038/srep32559
+- **\*Wang, C.**, Yatsuya, H., Li, Y., Ota, A., Tamakoshi, K., *et al.* 2016. Prospective study of seaweed consumption and thyroid cancer incidence in women: the Japan collaborative cohort study. **Eur J Cancer Prev** 25, 239–245.
 
-10. **\*Wang, C.**, Yatsuya, H., Li, Y., Ota, A., Tamakoshi, K., *et al.* 2016. Prospective study of seaweed consumption and thyroid cancer incidence in women: the Japan collaborative cohort study. **Eur J Cancer Prev** 25, 239–245. doi:10.1097/CEJ.0000000000000168
+<!-- 11. Lin, Y., Totsuka, Y., Shan, B., **\*Wang, C.**, Wei, W., *et al.* 2016. Esophageal cancer in high-risk areas of China: research progress and challenges. **Ann Epidemiol** doi:10.1016/j.annepidem.2016.11.004 -->
 
-11. Lin, Y., Totsuka, Y., Shan, B., **\*Wang, C.**, Wei, W., *et al.* 2016. Esophageal cancer in high-risk areas of China: research progress and challenges. **Ann Epidemiol** doi:10.1016/j.annepidem.2016.11.004
+<!-- 12. Hilawe, E.H., Chiang, C., Yatsuya, H., **\*Wang, C.**, Ikerdeu, E., *et al.* 2016. Prevalence and predictors of prediabetes and diabetes among adults in Palau: population-based national STEPS survey. **Nagoya J Med Sci** 78, 475-483. doi:10.18999/nagjms.78.4.475 -->
 
-12. Hilawe, E.H., Chiang, C., Yatsuya, H., **\*Wang, C.**, Ikerdeu, E., *et al.* 2016. Prevalence and predictors of prediabetes and diabetes among adults in Palau: population-based national STEPS survey. **Nagoya J Med Sci** 78, 475-483. doi:10.18999/nagjms.78.4.475
+<!-- 13. Kikuchi, N., Nishiyama, T., Sawada, T., **\*Wang, C.**, Lin, Y., Watanabe, Y., *et al.* 2017. Perceived Stress and Colorectal Cancer Incidence: The Japan Collaborative Cohort Study. **Sci Rep** 7, 40363. doi:10.1038/srep40363 -->
 
-13. Kikuchi, N., Nishiyama, T., Sawada, T., **\*Wang, C.**, Lin, Y., Watanabe, Y., *et al.* 2017. Perceived Stress and Colorectal Cancer Incidence: The Japan Collaborative Cohort Study. **Sci Rep** 7, 40363. doi:10.1038/srep40363
+- **\*Wang, C.**, Chiang, C., Yatsuya, H., Hilawe, E.H., Ikerdeu, E., *et al.* 2017. Descriptive Epidemiology of Hypertension and its Association with Obesity: Based on the WHO STEPwise Approach to Surveillance in Palau. **Asia Pac J Public Health** 29, 278–287.
 
-14. **\*Wang, C.**, Chiang, C., Yatsuya, H., Hilawe, E.H., Ikerdeu, E., *et al.* 2017. Descriptive Epidemiology of Hypertension and its Association with Obesity: Based on the WHO STEPwise Approach to Surveillance in Palau. **Asia Pac J Public Health** 29, 278–287. https://doi.org/10.1177/1010539517704042
+<!-- 15. Okuda, M., Mabe, K., Lin, Y., **\*Wang, C.**, Taniguchi, Y., *et al.* 2017. Rapid urine antibody test for Helicobacter pylori infection in adolescents. **Pediatr Int** 59, 798–802. https://doi.org/10.1111/ped.13286 -->
 
-15. Okuda, M., Mabe, K., Lin, Y., **\*Wang, C.**, Taniguchi, Y., *et al.* 2017. Rapid urine antibody test for Helicobacter pylori infection in adolescents. **Pediatr Int** 59, 798–802. https://doi.org/10.1111/ped.13286
+<!-- 13. Matsunaga, M., Yatsuya, H., Iso, H., Yamashita, K., Li, Y., Yamagishi, K., Tanabe, N., Wada, Y., **\*Wang, C.**, Ota, A., *et al.* 2017. Similarities and differences between coronary heart disease and stroke in the associations with cardiovascular risk factors: The Japan Collaborative Cohort Study. **Atherosclerosis** 261, 124-130. https://doi.org/10.1016/j.atherosclerosis.2017.03.003 -->
 
-13. Matsunaga, M., Yatsuya, H., Iso, H., Yamashita, K., Li, Y., Yamagishi, K., Tanabe, N., Wada, Y., **\*Wang, C.**, Ota, A., *et al.* 2017. Similarities and differences between coronary heart disease and stroke in the associations with cardiovascular risk factors: The Japan Collaborative Cohort Study. **Atherosclerosis** 261, 124-130. https://doi.org/10.1016/j.atherosclerosis.2017.03.003
+- **\*Wang, C.**, Nishiyama, T., Kikuchi, S., Inoue, M., Sawada, N., Tsugane, S., Lin, Y., 2017. Changing trends in the prevalence of *H. pylori* infection in Japan (1908–2003): a systematic review and meta-regression analysis of 170,752 individuals.  **Sci Rep** 7, 15491. 
 
-16. **\*Wang, C.**, Nishiyama, T., Kikuchi, S., Inoue, M., Sawada, N., Tsugane, S., Lin, Y., 2017. Changing trends in the prevalence of *H. pylori* infection in Japan (1908–2003): a systematic review and meta-regression analysis of 170,752 individuals.  **Sci Rep** 7, 15491. doi:10.1038/s41598-017-15490-7
+<!-- 17. Nakatochi, M., Lin, Y., Ito, H., Hara, K., Kinoshita, F., Kobayashi, Y., Ishii, H., Ozaka, M., Sasaki, T., Sasahira, N., Morimoto, M., Kobayashi, S., Ueno, M., Ohkawa, S., Egawa, N., Kuruma, S., Mori, M., Nakao, H., **\*Wang, C.**, Nishiyama, T., Kawaguchi, T., Takahashi, M., Matsuda, F., Kikuchi, S., Matsuo, K., 2018. Prediction model for pancreatic cancer risk in the general Japanese population. **PLOS ONE** 13, e0203386. https://doi.org/10.1371/journal.pone.0203386 -->
 
-17. Nakatochi, M., Lin, Y., Ito, H., Hara, K., Kinoshita, F., Kobayashi, Y., Ishii, H., Ozaka, M., Sasaki, T., Sasahira, N., Morimoto, M., Kobayashi, S., Ueno, M., Ohkawa, S., Egawa, N., Kuruma, S., Mori, M., Nakao, H., **\*Wang, C.**, Nishiyama, T., Kawaguchi, T., Takahashi, M., Matsuda, F., Kikuchi, S., Matsuo, K., 2018. Prediction model for pancreatic cancer risk in the general Japanese population. **PLOS ONE** 13, e0203386. https://doi.org/10.1371/journal.pone.0203386
+<!-- 18. Nishiyama, T., Nakatochi, M., Goto, A., Iwasaki, M., Hachiya, T., Sutoh, Y., Shimizu, A., **\*Wang, C.**, Tanaka, H., Watanabe, M., Hosono, A., Tamai, Y., Yamada, T., Yamaji, T.,*et al.* 2019. Genome-wide association meta-analysis and Mendelian randomization analysis confirm ALDH2 influencing on sleep duration in the Japanese population. **Sleep** zsz046, https://doi.org/10.1093/sleep/zsz046 -->
 
-18. Nishiyama, T., Nakatochi, M., Goto, A., Iwasaki, M., Hachiya, T., Sutoh, Y., Shimizu, A., **\*Wang, C.**, Tanaka, H., Watanabe, M., Hosono, A., Tamai, Y., Yamada, T., Yamaji, T.,*et al.* 2019. Genome-wide association meta-analysis and Mendelian randomization analysis confirm ALDH2 influencing on sleep duration in the Japanese population. **Sleep** zsz046, https://doi.org/10.1093/sleep/zsz046
+<!-- 19. Okuda, M., Lin, Y., **\*Wang, C.**, Kakiuch, T., Kikuchi S., 2019. Metronidazole for *Helicobacter* pylori eradication therapy among children and adolescents in Japan: overcoming controversies and concerns. **Helicobacter** 2019 Mar 15:e12575. https://doi.org/10.1111/hel.12575  -->
 
-19. Okuda, M., Lin, Y., **\*Wang, C.**, Kakiuch, T., Kikuchi S., 2019. Metronidazole for *Helicobacter* pylori eradication therapy among children and adolescents in Japan: overcoming controversies and concerns. **Helicobacter** 2019 Mar 15:e12575. https://doi.org/10.1111/hel.12575 
+<!-- 20. **\*Wang, C.**, Almoosawi, S., & Palla, L. (2019). The day-time patterns of carbohydrate intake in the UK adults – results from the NDNS RP (2008-16). **Proceedings of the Nutrition Society**, 78(OCE1), E30. doi:10.1017/S002966511900034X -->
 
-20. **\*Wang, C.**, Almoosawi, S., & Palla, L. (2019). The day-time patterns of carbohydrate intake in the UK adults – results from the NDNS RP (2008-16). **Proceedings of the Nutrition Society**, 78(OCE1), E30. doi:10.1017/S002966511900034X
+<!-- 21. **\*Wang, C.**, Almoosawi, S. & Palla, L. (2019). Day-Time Patterns of Carbohydrate Intake in Adults by Non-Parametric Multi-Level Latent Class Analysis—Results from the UK National Diet and Nutrition Survey (2008/09--2015/16). **Nutrients**, Multidisciplinary Digital Publishing Institute, 2019, 11, 2476. https://doi.org/10.3390/nu11102476 -->
 
-21. **\*Wang, C.**, Almoosawi, S. & Palla, L. (2019). Day-Time Patterns of Carbohydrate Intake in Adults by Non-Parametric Multi-Level Latent Class Analysis—Results from the UK National Diet and Nutrition Survey (2008/09--2015/16). **Nutrients**, Multidisciplinary Digital Publishing Institute, 2019, 11, 2476. https://doi.org/10.3390/nu11102476
+- **\*Wang, C.**, Almoosawi, S., & Palla, L., 2019. “Day-Time Patterns of Carbohydrate Intake in Adults by Non-Parametric Multi-Level Latent Class Analysis—Results from the UK National Diet and Nutrition Survey (2008/09--2015/16),” **Nutrients**, vol. 11, no. 10, p. 2476. 
 
+- **\*Wang, C.**, Ikemoto, T., Hirasawa, A., Arai, Y.-C., Kikuchi, S. and Deie, M., 2020. Assessment of locomotive syndrome among older individuals: a confirmatory factor analysis of the 25-question Geriatric Locomotive Function Scale. **PeerJ**, 8, e9026. 
 
-21. **\*Wang, C.**, Almoosawi, S., & Palla, L. (2019). “Day-Time Patterns of Carbohydrate Intake in Adults by Non-Parametric Multi-Level Latent Class Analysis—Results from the UK National Diet and Nutrition Survey (2008/09--2015/16),” Nutrients, vol. 11, no. 10, p. 2476. https://doi.org/10.3390/nu11102476 
-
+- **\*Wang, C.**, Yatsuya, H., Lin, Y., Sasakabe, T., Kawai, S., Kikuchi, S., Iso, H. and Tamakoshi, A., 2020. Milk Intake and Stroke Mortality in the Japan Collaborative Cohort Study—A Bayesian Survival Analysis. **Nutrients**, 12, 2743. 
 
 <!-- # PRESENTATIONS -->
 
