--- a/Rmarkdown/rap-2pg-cv.Rmd
+++ b/Rmarkdown/rap-2pg-cv.Rmd
@@ -232,6 +232,8 @@ Recipient of **Ajinomoto Scholarship** for outstanding students from overseas \h
 
 Recipient of scholarship from **Otsuka Toshimi Scholarship Foundation** \hfill 2013-2014
 
+**Best Reviewer** of Journal of Epidemiology  \hfill 2021.1.28
+
 
 # LANGUAGES  
 
