--- a/Rmarkdown/rap-2pg-cv.Rmd
+++ b/Rmarkdown/rap-2pg-cv.Rmd
@@ -8,10 +8,10 @@ geometry: margin=1in
 title: "CV"
 author: Chaochen Wang
 
-# jobtitle: ""
-# address: ""
+jobtitle: "Principal Scientist"
+address: "https://www.lilly.com/jp/careers/interview/jddma/wang"
 fontawesome: yes
-email: chaochen@wangcc.me
+email: chaochen.wang1@alumni.lshtm.ac.uk
 # github: winterwang 
 # phone: "+81 90-6592-0459"
 web: wangcc.me
@@ -30,20 +30,64 @@ urlcolor: blue
 
 **London School of Hygiene & Tropical Medicine**, MSc of Medical Statistics, Distinction Degree \hfill 2018.9
 
-**Nagoya University Graduate School of Medicine**, Doctor of Philosophy (Medical Science) \hfill  2016.3  
+**Nagoya University Graduate School of Medicine**, PhD in Public Health \hfill  2016.3  
 
-**Nagoya University Graduate School of Medicine**, Master of Medical Science \hfill 2013.3  
+**Nagoya University Graduate School of Medicine**, Master of Medical Science in Epidemiology \hfill 2013.3  
 
 **Shanghai Jiaotong Univeristy**, B.S. Nutrition Science \hfill 2010.7  
+
+# AWARDS & SHOLARSHIPS
+
+**Outstanding Graduates of Shanghai Jiaotong University** \hfill 2010
+
+Recipient of **Ajinomoto Scholarship** for outstanding students from overseas \hfill 2011-2012
+
+**Young Investigator's Award**, The 48th Annual Meeting of the Japanese Society of Cardiovascular Disease Prevention, Tokyo  \hfill  2012
+
+Recipient of scholarship from **Otsuka Toshimi Scholarship Foundation** \hfill 2013-2014
+
+**Best Reviewer** of Journal of Epidemiology  \hfill 2021.1.28
+
+Lilly Japan 2024Q2 **President Award winner** \hfill 2024
+
+Lilly Japan **Innovator Award** \hfill 2024 
+ 
+  - Innovative machine learning approach in Japan real world effectiveness study for RA patients.
+  - Using SNS data to reveal Atopic dermatitis patients’ unmet needs for future personalized treatment strategy
+  - Promoting innovative readiness from the early phase of development of Lp(a): evidence from large-scale epidemiological study in Japan.
+
+# LANGUAGES  
+
+  - Chinese Mandarin: Native Speaker
+  - Chinese Hokkien: Native Speaker
+  - English: Fluent (IELTS overall: 8; L 8.5, R 8.5, W 7, S 7) - 2017.1.7
+  - Japanese: Advanced (Japanese Language Proficiency Level 1)
+
+
+
 
 <!-- # EMPLOYMENT -->
 # CAREER HISTORY
 
+**Japan Value, Evidence and Outcomes (VEO), Japan Drug Development and Medical Affairs (JDD&MA), Eli Lilly and Company Japan K.K.**
 
-**Japan Value, Evidence and Outcomes, Japan Drug Development and Medical Affairs (JDDMA), Eli Lilly and Company Japan K.K.**
+ > Principal Scientist \hfill 2024.3-Present
 
- > Senior Associate  \hfill 2021.10--present
+**Japan Value, Evidence and Outcomes (VEO), Japan Drug Development and Medical Affairs (JDD&MA), Eli Lilly and Company Japan K.K.**
 
+ > Senior Scientist  \hfill 2021.10--2024.3
+
+
+## Responsibility: Real world evidence (RWE) planning and generation 
+
+-	Develops and oversees local RWE strategy for Lilly’s products in Japan in immunology, CVD and oncology area
+- Answering data queries from internal clients (marketing/pricing/clinical development/medical affairs etc.) using commercially available databases: Medical Data Vision, JMDC Claims database, etc. 
+- Lead in proposing, designing, and execution of observational researches generate RWE to support compounds from early clinical development throughout the whole life cycle.
+- Key member of Lilly Japan’s internal real world related working groups of 
+    - Integrated data platform for diverse RWD/E utilization
+    - Scientific study design
+    - Real-world data analytics 
+- Attended the VEO International Meeting in the UK (2024/04/14 - 2024/04/21) on behalf of Eli Lilly Japan VEO scientists, exchanging knowledge with Chinese and European colleagues and presenting our experiences on research collaborations with Public Interest Association and academic institutions
 
 
 **Department of Public Health, Aichi Medical University School of Medicine:**
@@ -62,9 +106,16 @@ urlcolor: blue
 -	Data analysis using large scale cohort studies such as the Japan Collaborative Cohort Study, literature meta-analysis, the UK National Diet and Nutrition Survey Rolling Program data, and data provided by doctors in Aichi Medical University hospital
 -	All projects and publications were conducted under Linux environment such as Ubuntu OS with R, STATA, and/or Python language
 -	Presented in the World Congress of Epidemiology in Alaska (2014) as well as in Saitama (2017) as poster presentations
--	Recent research on the day-time patterns of carbohydrate intake using the UK national Diet and Nutrition Survey data was accepted as oral presentation in the 13th European Nutrition Conference in Dublin, Ireland 2019
+-	Research on the day-time patterns of carbohydrate intake using the UK national Diet and Nutrition Survey data was accepted as oral presentation in the 13th European Nutrition Conference in Dublin, Ireland 2019
 
 
+**Nagoya University Graduate School of Medicine - Department of Public Health and Health Systems**
+
+ > Visiting Faculty
+ 
+## Responsibility: 
+
+- Provide lectures/seminars (topics include advanced statistical methodology such as Causal Inference) to graduate students in the Department of Public Health and Health Systems
 
 
 **Clinical Study Support:**
@@ -135,9 +186,33 @@ urlcolor: blue
 
 
 
-# PUBLICATIONS
+# PUBLICATIONS:
 
-- **\*Wang, C.**, Yatsuya, H., Tamakoshi, K., Uemura, M., Li, Y., *et al.* 2013. Positive association between high-sensitivity C-reactive protein and incidence of type 2 diabetes mellitus in Japanese workers: 6-year follow-up. **Diabetes Metab Res Rev** 29, 398–405. 
+(while in Eli Lilly):
+
+- **\*Wang, C.**, Aranishi, T., Reed, C., Anderson, P., Austin, J., Davis, V. A., Quinones, E., & Piercy, J. (2022). Impact of Patient and Physician Disconnect on Satisfaction with Treatment for Atopic Dermatitis in Japan. Dermatology and Therapy. https://doi.org/10.1007/s13555-022-00866-z 
+
+- Maruyama, D., **\*Wang, C.**, Y. Tanizawa, Z. Cai, Y. Huang, M. Tajimi and S. Kusumoto (2023). "Treatment patterns in patients with chronic lymphocytic leukemia/small lymphocytic lymphoma post covalent Bruton tyrosine kinase inhibitor treatment: a Japanese claims database study." J Clin Exp Hematop 63(4): 219-229.
+
+- **\*Wang, C.**, T. Ishizuka, M. Tanaka, K. Matsuo, H. Knight, N. Harvey, L. Gillespie-Akar and T. H. Gibble (2023). "Bowel Urgency in Patients with Ulcerative Colitis and Crohn's Disease: A Cross-Sectional Real-World Survey in Japan." Adv Ther.
+
+- **\*Wang, C.**, H. Torisu-Itakura, T. Hanada, T. Matsuo, Z. Cai, S. Osaga and T. Aranishi (2023). "Treatment persistence of interleukin-17 inhibitor class drugs among patients with psoriasis in Japan: a retrospective database study." Journal of Dermatological Treatment 34(1).
+
+- Kagawa, Y., **\*Wang, C.**, Y. Piao, L. Jin, Y. Tanizawa, Z. Cai and Y. Sunakawa (2024). "Real-World Evidence of FOLFIRI Combined with Anti-Angiogenesis Inhibitors or Anti-EGFR Antibodies for Patients with Early Recurrence Colorectal Cancer After Adjuvant FOLFOX/CAPOX Therapy: A Japanese Claims Database Study." Target Oncol.
+
+- Otsuka, A., **\*Wang, C.**, H. Torisu-Itakura, T. Matsuo, Y. Isaka, P. Anderson, J. Piercy, J. Austin, S. Marwaha and A. Tanaka (2024). "Patient and family burden in pediatric atopic dermatitis and its treatment pattern in Japan." Int J Dermatol.
+
+- Yuda, J., **\*Wang, C.**, T. Terasawa, M. Tajimi, S. Osaga, M. Miura, S. Takaoka and Y. Tanizawa (2024). "Treatment selection and influencing factors for chronic lymphocytic leukemia: a physician survey in Japan." Int J Clin Oncol.
+
+- Nishino, K., **\*Wang, C.**, S. Mizuno, N. Sekine, Y. Tanizawa, Z. Cai and K. Nakamura (2024). "Real-world Evidence of Skin Disorder-related Events Management in Patients with Lung Cancer Prescribed the RELAY Regimen (Erlotinib Plus Ramucirumab) - A Retrospective Observational Study Using A Health Insurance Claims Database in Japan [Article in Japanese]." J. New Rem. & Clin. 73: 7.
+
+- Lipoprotein(a) levels and the risk of coronary heart disease and stroke: the Suita Study. Journal of Atherosclerosis and Thrombosis. 2025 (accepted for publication, this is a collaborative study between Lilly and National Cerebral and Cardiovascular Center)
+
+More Publications before joining Eli Lilly can be found from [ORCID 0000-0001-5533-1497](https://orcid.org/my-orcid?orcid=0000-0001-5533-1497)
+
+
+
+<!-- - **\*Wang, C.**, Yatsuya, H., Tamakoshi, K., Uemura, M., Li, Y., *et al.* 2013. Positive association between high-sensitivity C-reactive protein and incidence of type 2 diabetes mellitus in Japanese workers: 6-year follow-up. **Diabetes Metab Res Rev** 29, 398–405.  -->
 
 <!-- 2. Uemura, M, Yatsuya, H., Tamakoshi, K., Li, Y., **\*Wang, C.**, *et al.* 2014. Association between five dietary health metrics of the American Heart Association and results of health checkups in a cross-sectional study of Japanese workers. **J J Cardiol Dis Prev** 49, 11. [Article in Japanese] -->
 
@@ -147,15 +222,15 @@ urlcolor: blue
 
 <!-- 5. Uemura, M., Yatsuya, H., Hilawe, E.H., Li, Y., **\*Wang, C.**, *et al.* 2015. Breakfast skipping is positively associated with incidence of type 2 diabetes mellitus: evidence from the Aichi workers’ cohort study. **J Epidemiol** 25, 351–358. doi:10.2188/jea.JE20140109 -->
 
-- **\*Wang, C.**, Yatsuya, H., Tamakoshi, K., Iso, H., Tamakoshi, A., 2015. Milk drinking and mortality: findings from the Japan collaborative cohort study. **J Epidemiol** 25, 66–73.
+<!-- - **\*Wang, C.**, Yatsuya, H., Tamakoshi, K., Iso, H., Tamakoshi, A., 2015. Milk drinking and mortality: findings from the Japan collaborative cohort study. **J Epidemiol** 25, 66–73. -->
 
-- **\*Wang, C.**, Yatsuya, H., Tamakoshi, K., Toyoshima, H., Wada, K., *et al.* 2015. Association between parental history of diabetes and the incidence of type 2 diabetes mellitus differs according to the sex of the parent and offspring’s body weight: A finding from a Japanese worksite-based cohort study. **Prev Med** 81, 49–53.
+<!-- - **\*Wang, C.**, Yatsuya, H., Tamakoshi, K., Toyoshima, H., Wada, K., *et al.* 2015. Association between parental history of diabetes and the incidence of type 2 diabetes mellitus differs according to the sex of the parent and offspring’s body weight: A finding from a Japanese worksite-based cohort study. **Prev Med** 81, 49–53. -->
 
 <!-- 8. Hilawe, E.H., Yatsuya, H., Li, Y., Uemura, M., **\*Wang, C.**, *et al.* 2015. Smoking and Diabetes: Is the Association Mediated by Adiponectin, Leptin, or C-reactive Protein? **J Epidemiol** 25, 99–109. doi:10.2188/jea.JE20140055 -->
 
 <!-- 9. Sawada, T., Nishiyama, T., Kikuchi, N., **\*Wang, C.**, *et al.* 2016. The influence of personality and perceived stress on the development of breast cancer: 20-year follow-up of 29,098 Japanese women. **Sci Rep** 6, 32559. doi:10.1038/srep32559 -->
 
-- **\*Wang, C.**, Yatsuya, H., Li, Y., Ota, A., Tamakoshi, K., *et al.* 2016. Prospective study of seaweed consumption and thyroid cancer incidence in women: the Japan collaborative cohort study. **Eur J Cancer Prev** 25, 239–245.
+<!-- - **\*Wang, C.**, Yatsuya, H., Li, Y., Ota, A., Tamakoshi, K., *et al.* 2016. Prospective study of seaweed consumption and thyroid cancer incidence in women: the Japan collaborative cohort study. **Eur J Cancer Prev** 25, 239–245. -->
 
 <!-- 11. Lin, Y., Totsuka, Y., Shan, B., **\*Wang, C.**, Wei, W., *et al.* 2016. Esophageal cancer in high-risk areas of China: research progress and challenges. **Ann Epidemiol** doi:10.1016/j.annepidem.2016.11.004 -->
 
@@ -163,13 +238,13 @@ urlcolor: blue
 
 <!-- 13. Kikuchi, N., Nishiyama, T., Sawada, T., **\*Wang, C.**, Lin, Y., Watanabe, Y., *et al.* 2017. Perceived Stress and Colorectal Cancer Incidence: The Japan Collaborative Cohort Study. **Sci Rep** 7, 40363. doi:10.1038/srep40363 -->
 
-- **\*Wang, C.**, Chiang, C., Yatsuya, H., Hilawe, E.H., Ikerdeu, E., *et al.* 2017. Descriptive Epidemiology of Hypertension and its Association with Obesity: Based on the WHO STEPwise Approach to Surveillance in Palau. **Asia Pac J Public Health** 29, 278–287.
+<!-- - **\*Wang, C.**, Chiang, C., Yatsuya, H., Hilawe, E.H., Ikerdeu, E., *et al.* 2017. Descriptive Epidemiology of Hypertension and its Association with Obesity: Based on the WHO STEPwise Approach to Surveillance in Palau. **Asia Pac J Public Health** 29, 278–287. -->
 
 <!-- 15. Okuda, M., Mabe, K., Lin, Y., **\*Wang, C.**, Taniguchi, Y., *et al.* 2017. Rapid urine antibody test for Helicobacter pylori infection in adolescents. **Pediatr Int** 59, 798–802. https://doi.org/10.1111/ped.13286 -->
 
 <!-- 13. Matsunaga, M., Yatsuya, H., Iso, H., Yamashita, K., Li, Y., Yamagishi, K., Tanabe, N., Wada, Y., **\*Wang, C.**, Ota, A., *et al.* 2017. Similarities and differences between coronary heart disease and stroke in the associations with cardiovascular risk factors: The Japan Collaborative Cohort Study. **Atherosclerosis** 261, 124-130. https://doi.org/10.1016/j.atherosclerosis.2017.03.003 -->
 
-- **\*Wang, C.**, Nishiyama, T., Kikuchi, S., Inoue, M., Sawada, N., Tsugane, S., Lin, Y., 2017. Changing trends in the prevalence of *H. pylori* infection in Japan (1908–2003): a systematic review and meta-regression analysis of 170,752 individuals.  **Sci Rep** 7, 15491. 
+<!-- - **\*Wang, C.**, Nishiyama, T., Kikuchi, S., Inoue, M., Sawada, N., Tsugane, S., Lin, Y., 2017. Changing trends in the prevalence of *H. pylori* infection in Japan (1908–2003): a systematic review and meta-regression analysis of 170,752 individuals.  **Sci Rep** 7, 15491.  -->
 
 <!-- 17. Nakatochi, M., Lin, Y., Ito, H., Hara, K., Kinoshita, F., Kobayashi, Y., Ishii, H., Ozaka, M., Sasaki, T., Sasahira, N., Morimoto, M., Kobayashi, S., Ueno, M., Ohkawa, S., Egawa, N., Kuruma, S., Mori, M., Nakao, H., **\*Wang, C.**, Nishiyama, T., Kawaguchi, T., Takahashi, M., Matsuda, F., Kikuchi, S., Matsuo, K., 2018. Prediction model for pancreatic cancer risk in the general Japanese population. **PLOS ONE** 13, e0203386. https://doi.org/10.1371/journal.pone.0203386 -->
 
@@ -181,11 +256,11 @@ urlcolor: blue
 
 <!-- 21. **\*Wang, C.**, Almoosawi, S. & Palla, L. (2019). Day-Time Patterns of Carbohydrate Intake in Adults by Non-Parametric Multi-Level Latent Class Analysis—Results from the UK National Diet and Nutrition Survey (2008/09--2015/16). **Nutrients**, Multidisciplinary Digital Publishing Institute, 2019, 11, 2476. https://doi.org/10.3390/nu11102476 -->
 
-- **\*Wang, C.**, Almoosawi, S., & Palla, L., 2019. “Day-Time Patterns of Carbohydrate Intake in Adults by Non-Parametric Multi-Level Latent Class Analysis—Results from the UK National Diet and Nutrition Survey (2008/09--2015/16),” **Nutrients**, vol. 11, no. 10, p. 2476. 
+<!-- - **\*Wang, C.**, Almoosawi, S., & Palla, L., 2019. “Day-Time Patterns of Carbohydrate Intake in Adults by Non-Parametric Multi-Level Latent Class Analysis—Results from the UK National Diet and Nutrition Survey (2008/09--2015/16),” **Nutrients**, vol. 11, no. 10, p. 2476.  -->
 
-- **\*Wang, C.**, Ikemoto, T., Hirasawa, A., Arai, Y.-C., Kikuchi, S. and Deie, M., 2020. Assessment of locomotive syndrome among older individuals: a confirmatory factor analysis of the 25-question Geriatric Locomotive Function Scale. **PeerJ**, 8, e9026. 
+<!-- - **\*Wang, C.**, Ikemoto, T., Hirasawa, A., Arai, Y.-C., Kikuchi, S. and Deie, M., 2020. Assessment of locomotive syndrome among older individuals: a confirmatory factor analysis of the 25-question Geriatric Locomotive Function Scale. **PeerJ**, 8, e9026.  -->
 
-- **\*Wang, C.**, Yatsuya, H., Lin, Y., Sasakabe, T., Kawai, S., Kikuchi, S., Iso, H. and Tamakoshi, A., 2020. Milk Intake and Stroke Mortality in the Japan Collaborative Cohort Study—A Bayesian Survival Analysis. **Nutrients**, 12, 2743. 
+<!-- - **\*Wang, C.**, Yatsuya, H., Lin, Y., Sasakabe, T., Kawai, S., Kikuchi, S., Iso, H. and Tamakoshi, A., 2020. Milk Intake and Stroke Mortality in the Japan Collaborative Cohort Study—A Bayesian Survival Analysis. **Nutrients**, 12, 2743.  -->
 
 <!-- # PRESENTATIONS -->
 
@@ -229,22 +304,3 @@ urlcolor: blue
 <!-- **\*Wang, C.**, "Associations between food groups and eating time slots by diabetes status in UK adults". The 30th Annual Scientific Meeting of the Japan Epidemiological Association, Kyoto, Japan, 21st, Feb, O-024. -->
 
 
-# AWARDS & SHOLARSHIPS
-
-**Outstanding Graduates of Shanghai Jiaotong University** \hfill 2010
-
-Recipient of **Ajinomoto Scholarship** for outstanding students from overseas \hfill 2011-2012
-
-**Young Investigator's Award**, The 48th Annual Meeting of the Japanese Society of Cardiovascular Disease Prevention, Tokyo  \hfill  2012
-
-Recipient of scholarship from **Otsuka Toshimi Scholarship Foundation** \hfill 2013-2014
-
-**Best Reviewer** of Journal of Epidemiology  \hfill 2021.1.28
-
-
-# LANGUAGES  
-
-  - Chinese Mandarin: Native Speaker
-  - Chinese Hokkien: Native Speaker
-  - English: Fluent (IELTS overall: 8; L 8.5, R 8.5, W 7, S 7) - 2017.1.7
-  - Japanese: Advanced (Japanese Language Proficiency Level 1)
