cv removed lilly webpage link

--- a/Rmarkdown/rap-2pg-cv.Rmd
+++ b/Rmarkdown/rap-2pg-cv.Rmd
@@ -9,7 +9,7 @@ title: "CV"
 author: Chaochen Wang
 
 jobtitle: "Principal Scientist"
-address: "https://www.lilly.com/jp/careers/interview/jddma/wang"
+# address: "https://www.wangcc.me"
 fontawesome: yes
 email: chaochen.wang1@alumni.lshtm.ac.uk
 # github: winterwang 
